--- a/Version-1.1/frontend/register.html
+++ b/Version-1.1/frontend/register.html
@@ -16,7 +16,7 @@
       <input type="password" id="password"  name="password" required>
 
       <label for="role">Rol:</label>
-      <select name="role" id="role-info">
+      <select name="role" id="role">
         <option value="manager">Manager</option>
         <option value="owner">Owner</option>
       </select>
