--- a/Version-1.1/frontend/login.html
+++ b/Version-1.1/frontend/login.html
@@ -10,12 +10,12 @@
 <body>
     <div class="container">
         <h1>Iniciar sesión</h1>
-        <form id="loginForm">
+        <form id="loginForm" autocomplete="off">
             <label for="username">Usuario:</label>
-            <input type="text" id="username" name="username" required>
+            <input type="text" id="username" name="username" autocomplete="off" required>
 
             <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password" required>
+            <input type="password" id="password" name="password" autocomplete="off" required>
 
             <button type="submit">Ingresar</button>
         </form>
