--- a/Version-1.1/frontend/register.html
+++ b/Version-1.1/frontend/register.html
@@ -8,12 +8,12 @@
 <body>
   <div class="container">
     <h1>Registro de usuario</h1>
-    <form id="registerForm">
+    <form id="registerForm" autocomplete="off">
       <label for="username">Usuario:</label>
-      <input type="text" id="username"  name="username" required>
+      <input type="text" id="username"  name="username" autocomplete="off" required>
 
       <label for="password">Contraseña:</label>
-      <input type="password" id="password"  name="password" required>
+      <input type="password" id="password"  name="password" autocomplete="off" required>
 
       <label for="role">Rol:</label>
       <select name="role" id="role">
