--- a/Version-1.1/frontend/dashboard.html
+++ b/Version-1.1/frontend/dashboard.html
@@ -31,11 +31,12 @@
     </div>
 
     <div style="text-align: center; margin-top: 2rem;">
-      <button class="logout-button" onclick="logout()">Cerrar sesión</button>
+      <button id="logoutBtn" class="logout-button">Cerrar sesión</button>
     </div>
   </div>
 
   <script src="js/config.js"></script>
   <script src="js/dashboard.js"></script>
+  <script src="js/logout.js"></script>
 </body>
 </html>
